--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "custom-log",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "A tiny flexible logger",
   "main": "custom-log.min.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "console.log"
   ],
   "author": "Dennis Raymondo <phazelift@gmail.com> (https://github.com/phazelift/)",
-  "license": "GPL-3",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/phazelift/custom-log/issues"
   },
