--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "custom-log",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "A tiny flexible logger",
   "main": "custom-log.min.js",
   "scripts": {
     "uglify": "uglifyjs custom-log.js -c -m -o custom-log.min.js",
-    "build": "coffee -c --transpile custom-log.coffee && npm run uglify",
+    "build": "coffee -c custom-log.coffee && npm run uglify",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "@babel/core": "latest",
-    "@babel/preset-env": "latest"
   },
   "repository": {
     "type": "git",
